fixing sagemaker arn retreival, updating cdk stack README

--- a/lambda_functions/text_counterfactuals/Dockerfile
+++ b/lambda_functions/text_counterfactuals/Dockerfile
@@ -5,5 +5,5 @@ RUN pip install -U pip setuptools wheel \
   && pip install -U spacy \
   && python -m spacy download en_core_web_sm
 
-COPY unmask_models.py .
+COPY text_counterfactuals.py .
 CMD ["unmask_models.handler"]
