--- a/streamlit_app/Dockerfile
+++ b/streamlit_app/Dockerfile
@@ -6,4 +6,4 @@ RUN  pip3 install --upgrade pip && pip3 install -r requirements.txt
 COPY . .
 
 # Command overriden by docker-compose
-CMD streamlit run homepage.py --server.port=8080 --server.address=0.0.0.0
+CMD ["streamlit" "run" "homepage.py" "--server.port=8080" "--server.address=0.0.0.0"]
